--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -178,7 +178,7 @@ button {
 
 #globalnav a {
 	display: block;
-	color: #444;
+	color: #0b77b7;
 	text-decoration: none;
 	font-weight: bold;
 	background: #ddd;
