--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -11,6 +11,7 @@ html {
 	font: 90%/1.3 arial,sans-serif;
 	padding:1em;
 	background:#fafafa;
+
 }
 
 body {
@@ -72,6 +73,11 @@ label {
 
 fieldset {
 	border: 1px solid #ddd;
+        background: no-repeat center center,-moz-linear-gradient(top,rgba(255,255,255,0.3), rgba(200,242,255,0.3));
+	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.3), rgba(200,242,255,0.3));
+	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.3), rgba(200,242,255,0.3));
+	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.3), rgba(200,242,255,0.3));
+	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.3), rgba(200,242,255,0.3));
 	padding: 0.5em;
 	margin: 0.5em;
 	width: 36em;
@@ -185,29 +191,30 @@ button {
 	color: #0b77b7;
 	text-decoration: none;
 	font-weight: bold;
-	background: rgba(100,255,203,0.4);
-	background: no-repeat center center,-moz-linear-gradient(left, rgba(100,255,203,0.4), rgba(100,255,255,0.4));
-	background: no-repeat center center,-webkit-linear-gradient(left, rgba(100,255,203,0.4), rgba(100,255,255,0.4));
-	background: no-repeat center center,-o-linear-gradient(left, rgba(100,255,203,0.4), rgba(100,255,255,0.4));
-	background: no-repeat center center,-ms-linear-gradient(left, rgba(100,255,203,0.4), rgba(100,255,255,0.4));
-	background: no-repeat center center,linear-gradient(left, rgba(100,255,203,0.4), rgba(100,255,255,0.4));
+	background: rgba(100,255,255,0.3);
+	background: no-repeat center center,-moz-linear-gradient(left,    rgba(100,255,203,0.15), rgba(100,255,255,0.15));
+	background: no-repeat center center,-webkit-linear-gradient(left, rgba(100,255,203,0.15), rgba(100,255,255,0.15));
+	background: no-repeat center center,-o-linear-gradient(left,      rgba(100,255,203,0.15), rgba(100,255,255,0.15));
+	background: no-repeat center center,-ms-linear-gradient(left,     rgba(100,255,203,0.15), rgba(100,255,255,0.15));
+	background: no-repeat center center,linear-gradient(left,         rgba(100,255,203,0.15), rgba(100,255,255,0.15));
 	margin: 0;
 	padding: 0.25em 1em;
 	border-left: 1px solid #fff;
 	border-top: 1px solid #fff;
 	border-right: 1px solid #aaa;
+    text-shadow: 0px 0px 3px white;
 }
 
 #globalnav a:hover,
 #globalnav a:active,
 #globalnav a.here:link,
 #globalnav a.here:visited {
-	rgba(80,225,255,0.4);
-	background: no-repeat center center,-moz-linear-gradient(left, rgba(100,203,255,0.4), rgba(130,255,223,0.4));
-	background: no-repeat center center,-webkit-linear-gradient(left,  rgba(100,203,255,0.4), rgba(130,255,223,0.4));
-	background: no-repeat center center,-o-linear-gradient(left,  rgba(100,203,255,0.4), rgba(130,255,223,0.4));
-	background: no-repeat center center,-ms-linear-gradient(left,  rgba(100,203,255,0.4), rgba(130,255,223,0.4));
-	background: no-repeat center center,linear-gradient(left,  rgba(100,203,255,0.4), rgba(130,255,223,0.4));
+	background: rgba(100,203,255,0.3);
+	background: no-repeat center center,-moz-linear-gradient(left,     rgba(100,203,255,0.15), rgba(130,255,223,0.15));
+	background: no-repeat center center,-webkit-linear-gradient(left,  rgba(100,203,255,0.15), rgba(130,255,223,0.15));
+	background: no-repeat center center,-o-linear-gradient(left,       rgba(100,203,255,0.15), rgba(130,255,223,0.15));
+	background: no-repeat center center,-ms-linear-gradient(left,      rgba(100,203,255,0.15), rgba(130,255,223,0.15));
+	background: no-repeat center center,linear-gradient(left,          rgba(100,203,255,0.15), rgba(130,255,223,0.15));
 }
 
 #globalnav a.here:link,
