--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -9,8 +9,13 @@ li { list-style-type: none; }
 
 html {
 	font: 90%/1.3 arial,sans-serif;
-	padding:1em;
-	background:#fafafa;
+	padding:5%;
+	background: rgba(0,142,255,0.15);
+    background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,0.5), rgba(0,142,255,0.15));
+	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.5), rgba(0,142,255,0.15));
+	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.5), rgba(0,142,255,0.15));
+	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.5), rgba(0,142,255,0.15));
+	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.5), rgba(0,142,255,0.15));
 
 }
 
@@ -73,11 +78,11 @@ label {
 
 fieldset {
 	border: 1px solid #ddd;
-        background: no-repeat center center,-moz-linear-gradient(top,rgba(255,255,255,0.3), rgba(200,242,255,0.3));
-	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.3), rgba(200,242,255,0.3));
-	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.3), rgba(200,242,255,0.3));
-	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.3), rgba(200,242,255,0.3));
-	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.3), rgba(200,242,255,0.3));
+    background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,0.5), rgba(200,255,230,0.5));
+	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.5), rgba(200,255,230,0.5));
+	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.5), rgba(200,255,230,0.5));
+	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.5), rgba(200,255,230,0.5));
+	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.5), rgba(200,255,230,0.5));
 	padding: 0.5em;
 	margin: 0.5em;
 	width: 36em;
@@ -258,4 +263,11 @@ button {
 #globalnav ul a.here:link,
 #globalnav ul a.here:visited {
 	color: #444;
+}
+
+.footer-svg {
+    width: 110%;
+    z-index: 0;
+    margin: -5%;
+    margin-top: 4%;
 }
