--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -10,12 +10,12 @@ li { list-style-type: none; }
 html {
 	font: 90%/1.3 arial,sans-serif;
 	padding:5%;
-	background: rgba(0,142,255,0.15);
-    background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,0.5), rgba(0,142,255,0.15));
-	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.5), rgba(0,142,255,0.15));
-	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.5), rgba(0,142,255,0.15));
-	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.5), rgba(0,142,255,0.15));
-	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.5), rgba(0,142,255,0.15));
+	background: rgba(0,142,255,0.12);
+	background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,0.5), rgba(0,142,255,0.1));
+	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.5), rgba(0,142,255,0.1));
+	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.5), rgba(0,142,255,0.1));
+	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.5), rgba(0,142,255,0.1));
+	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.5), rgba(0,142,255,0.1));
 
 }
 
@@ -77,12 +77,12 @@ label {
 }
 
 fieldset {
-	border: 1px solid #ddd;
-    background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,0.5), rgba(200,255,230,0.5));
-	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,0.5), rgba(200,255,230,0.5));
-	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,0.5), rgba(200,255,230,0.5));
-	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,0.5), rgba(200,255,230,0.5));
-	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,0.5), rgba(200,255,230,0.5));
+	border: 1px solid #ddf;
+	background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,1), rgba(220,255,240,0.6));
+	background: no-repeat center center,-webkit-linear-gradient(top, rgba(255,255,255,1), rgba(220,255,240,0.6));
+	background: no-repeat center center,-o-linear-gradient(top,      rgba(255,255,255,1), rgba(220,255,240,0.6));
+	background: no-repeat center center,-ms-linear-gradient(top,     rgba(255,255,255,1), rgba(220,255,240,0.6));
+	background: no-repeat center center,linear-gradient(top,         rgba(255,255,255,1), rgba(220,255,240,0.6));
 	padding: 0.5em;
 	margin: 0.5em;
 	width: 36em;
@@ -90,6 +90,7 @@ fieldset {
 
 fieldset fieldset {
 	width: auto;
+        background: rgba(255,255,255,0.7);
 }
 
 fieldset > * {
@@ -103,7 +104,7 @@ fieldset div > * {
 }
 
 input {
-	padding: 0.15em;
+	padding: 0.12em;
 	width: 15em;
 	border: 1px solid #ddd;
 	background: #fafafa;
@@ -197,17 +198,17 @@ button {
 	text-decoration: none;
 	font-weight: bold;
 	background: rgba(100,255,255,0.3);
-	background: no-repeat center center,-moz-linear-gradient(left,    rgba(100,255,203,0.15), rgba(100,255,255,0.15));
-	background: no-repeat center center,-webkit-linear-gradient(left, rgba(100,255,203,0.15), rgba(100,255,255,0.15));
-	background: no-repeat center center,-o-linear-gradient(left,      rgba(100,255,203,0.15), rgba(100,255,255,0.15));
-	background: no-repeat center center,-ms-linear-gradient(left,     rgba(100,255,203,0.15), rgba(100,255,255,0.15));
-	background: no-repeat center center,linear-gradient(left,         rgba(100,255,203,0.15), rgba(100,255,255,0.15));
+	background: no-repeat center center,-moz-linear-gradient(left,    rgba(100,255,203,0.12), rgba(100,255,255,0.12));
+	background: no-repeat center center,-webkit-linear-gradient(left, rgba(100,255,203,0.12), rgba(100,255,255,0.12));
+	background: no-repeat center center,-o-linear-gradient(left,      rgba(100,255,203,0.12), rgba(100,255,255,0.12));
+	background: no-repeat center center,-ms-linear-gradient(left,     rgba(100,255,203,0.12), rgba(100,255,255,0.12));
+	background: no-repeat center center,linear-gradient(left,         rgba(100,255,203,0.12), rgba(100,255,255,0.12));
 	margin: 0;
-	padding: 0.25em 1em;
+	padding: 0.35em 1.5em;
 	border-left: 1px solid #fff;
 	border-top: 1px solid #fff;
 	border-right: 1px solid #aaa;
-    text-shadow: 0px 0px 3px white;
+	text-shadow: 0px 0px 3px white;
 }
 
 #globalnav a:hover,
@@ -215,11 +216,11 @@ button {
 #globalnav a.here:link,
 #globalnav a.here:visited {
 	background: rgba(100,203,255,0.3);
-	background: no-repeat center center,-moz-linear-gradient(left,     rgba(100,203,255,0.15), rgba(130,255,223,0.15));
-	background: no-repeat center center,-webkit-linear-gradient(left,  rgba(100,203,255,0.15), rgba(130,255,223,0.15));
-	background: no-repeat center center,-o-linear-gradient(left,       rgba(100,203,255,0.15), rgba(130,255,223,0.15));
-	background: no-repeat center center,-ms-linear-gradient(left,      rgba(100,203,255,0.15), rgba(130,255,223,0.15));
-	background: no-repeat center center,linear-gradient(left,          rgba(100,203,255,0.15), rgba(130,255,223,0.15));
+	background: no-repeat center center,-moz-linear-gradient(left,     rgba(100,203,255,0.2), rgba(130,255,223,0.2));
+	background: no-repeat center center,-webkit-linear-gradient(left,  rgba(100,203,255,0.2), rgba(130,255,223,0.2));
+	background: no-repeat center center,-o-linear-gradient(left,       rgba(100,203,255,0.2), rgba(130,255,223,0.2));
+	background: no-repeat center center,-ms-linear-gradient(left,      rgba(100,203,255,0.2), rgba(130,255,223,0.2));
+	background: no-repeat center center,linear-gradient(left,          rgba(100,203,255,0.2), rgba(130,255,223,0.2));
 }
 
 #globalnav a.here:link,
