kleine Designänderung für die Statusseite der Freifunknodes

--- a/files/www/freifunk/css/side-menu.css
+++ b/files/www/freifunk/css/side-menu.css
@@ -65,7 +65,7 @@ The content `<div>` is where all your content goes.
     }
      .header h2 {
         font-weight: 300;
-        color: #ccc;
+        color: #aaf;
         padding: 0;
         margin-top: 0;
     }
