--- a/files/www/freifunk/css/style.css
+++ b/files/www/freifunk/css/style.css
@@ -76,3 +76,10 @@ a.pure-button-primary {
 .home-menu ul {
 	float: right;
 }
+
+ul {                                            
+        list-style-type: none;                  
+}                                               
+.neighbor {                                     
+        text-decoration: none;                  
+}    
