--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -285,3 +285,18 @@ button {
 .de0 {
     display: none;
 }
+.de1 {
+    display: none;
+}
+.de2 {
+    display: none;
+}
+.de3 {
+    display: none;
+}
+.de4 {
+    display: none;
+}
+.de5 {
+    display: none;
+}
