--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -81,13 +81,21 @@ body {
 
 /* message */
 
-#msg {
+#msg, {
 	margin: 0.5em 0.5em 1.5em 0.5em;
 	padding: 0 0 0 1.5rem;
 	line-height: 1.9rem;
 	background-color: rgba(255, 180, 0, 0.26);
 	color: #000000;
 	border-radius: 1px 10px;
+}
+
+.development {
+	padding: 1.3em;
+	color: #9a0808;
+	background-color: rgba(255, 49, 0, 0.26);
+	border-radius: 1px 10px;
+	margin: 0.5em 0 2em 0;
 }
 
 
@@ -123,7 +131,7 @@ fieldset {
 
 fieldset fieldset {
 	width: auto;
-        background: rgba(255,255,255,0.7);
+	background: rgba(255,255,255,0.7);
 }
 
 fieldset > * {
@@ -138,11 +146,11 @@ fieldset div > * {
 
 /* Text input */
 input[type=text] {
-        padding: 3px 7px;
+	padding: 3px 7px;
 	margin-bottom: 2px;
 	border: solid 1px #ACACAC;
-        box-shadow: inset 0px 10px 23px -10px #AAA;
-        color: #4c4c4c;
+	box-shadow: inset 0px 10px 23px -10px #AAA;
+	color: #4c4c4c;
 }
 
 input[type=text]:hover, input[type=text]:focus {
@@ -369,7 +377,7 @@ button {
 	margin-right: 1.5em;
 	padding-bottom: 0.5em;
 	width: 100%;
-    	max-width: 15.0rem;
+	max-width: 15.0rem;
 	float: left;
 	box-shadow: 0px 0px 2px 1px #c9c9c9;
 	background: #f9f9f9;
@@ -460,21 +468,12 @@ button {
 }
 
 .footer-svg {
-    width: 113%;
-    z-index: 0;
-    margin: -7.5%;
-    margin-top: 8%;
-}
-
-.development {
-    padding: 1.3em;
-    color: #dc0067;
-    background: #f0ef95;
-    box-shadow: 1px 1px 6px 6px #f0ef95;
-    border-radius: 23px;
-    margin: 2.5em;
+	width: 113%;
+	z-index: 0;
+	margin: -7.5%;
+	margin-top: 8%;
 }
 
 .de0 {
-    display: none;
+	display: none;
 }
