--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -11,7 +11,6 @@ a { text-decoration: none; }
 li { list-style-type: none; }
 
 html {
-	font: 90%/1.3 arial,sans-serif;
 	padding:5%;
 	background: rgba(0,142,255,0.12);
 	background: no-repeat center center,-moz-linear-gradient(top,    rgba(255,255,255,0.5), rgba(0,142,255,0.1));
@@ -122,7 +121,7 @@ label {
 
 fieldset {
 	border: 1px solid #a2a2a2;
-	background: rgb(222, 222, 228);
+	background: rgba(222, 222, 228, 0.6);
 	padding: 0.5em;
 	margin: 0.5em;
 	min-width: 36em;
