--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -102,7 +102,7 @@ body {
 
 legend {
 	background-color: #009ee0;
-	font-size: large;
+	font-size: 115%;
 	font-style: italic;
 	color: #ffffff;
 	width: 50%;
@@ -394,7 +394,7 @@ button {
 	margin: 0;
 	margin-bottom: 2%;
 	list-style: none;
-	font-size: 1.125rem;
+	font-size: 113%;
 	border-bottom-color: #a0a0a0;
 	border-bottom-style: solid;
 	border-bottom-width: thin;
