Set fixed width of fieldset again, because using "min-width" screwed up layout in some cases ;-)

--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -124,7 +124,7 @@ fieldset {
 	background: rgba(222, 222, 228, 0.6);
 	padding: 0.5em;
 	margin: 0.5em;
-	min-width: 36em;
+	width: 36em;
 	border-radius: 3px 3px;
 }
 
