"Einstellungen beibehalten" war verdeckt

--- a/files/www/lan/style.css
+++ b/files/www/lan/style.css
@@ -512,3 +512,7 @@ button {
 #globalnav ul a.here:visited {
 	color: #444;
 }
+.radio_option_upgrade {
+	        margin: 0.5em;
+	        margin-bottom: 2em;
+} 
